<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/camera_overlay_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ViewStub
        android:id="@+id/overlay_build_target_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout="@layout/build_target_help"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/semi_transparent_black"
        android:padding="30dp"
        android:visibility="gone" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/overlay_bottom_bar_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="1" >

        <Button
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/content_desc_close_button"
            android:onClick="onCloseClick"
            android:text="@string/button_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/cancel_text" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/overlay_bottom_bar_separators" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" >

            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/content_desc_camera_button"
                android:onClick="onCameraClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/camera_button_background" />

            <ImageButton
                android:id="@+id/new_target_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:contentDescription="@string/content_desc_new_target_button"
                android:onClick="onNewTargetButtonClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/close_button_background" />
        </FrameLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/overlay_bottom_bar_separators" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottom_bar"
        android:background="@color/overlay_bottom_bar_separators" />

    <ViewStub
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/instructions_overlay"
        android:visibility="gone" />

</RelativeLayout>